# freertos-riscv-typed

./: .gitignore  .gitmodules  Dockerfile  README.md  Status.md  UIdaho Tagging Model.docx
libtypetag/: Makefile  install.sh
libtypetag/include/typetag/: control.h  exception.h  typetag.h
libtypetag/src/: control_riscv.c  typetag.c
scripts/: openocd-gdb-attach  spike-run32
tests/HelloWorld/: Makefile
tests/basicTag/: Makefile  main.c  riscv-hooks.c  riscv-virt.h
tools/: injectSegment.py  requirements.txt
tools/elf-inject-cpp/: CMakeLists.txt  README.md  elf-inject.cpp
tools/elf-inject-cpp/mvp/: CMakeLists.txt
